# mcp-sharepoint

./: .dockerignore  .env.reply  .gitignore  AZURE_CONTAINER_APP_GUIDE.md  Dockerfile  README.md  http_wrapper.py  pyproject.toml  requirements.txt  setup-github-actions-permissions.ps1
.github/workflows/: cluxit-mcp-sharepoint-ca-AutoDeployTrigger-e22f307c-c477-4448-9620-486eb99473d2.yml  main_cluxit-mcp-sharepoint.yml
src/mcp_sharepoint/: __main__.py  common.py  resources.py
